--- a/iam.yaml
+++ b/iam.yaml
@@ -31,17 +31,26 @@ Resources:
           - Effect: Allow
             Action:
               - iam:GetRole
-              - iam:PassRole
-              - iam:CreateRole
-              - iam:DeleteRole
-              - iam:AttachRolePolicy
-              - iam:DetachRolePolicy
-              - iam:PutRolePolicy
-              - iam:DeleteRolePolicy
-              - iam:CreateInstanceProfile
-              - iam:AddRoleToInstanceProfile
-              - iam:RemoveRoleFromInstanceProfile
-              - iam:DeleteInstanceProfile
+      				- iam:PassRole  
+      				- iam:CreateRole  
+      				- iam:DeleteRole  
+      				- iam:AttachRolePolicy  
+      				- iam:DetachRolePolicy  
+      				- iam:PutRolePolicy  
+      				- iam:DeleteRolePolicy  
+      				- iam:CreateInstanceProfile  
+      				- iam:AddRoleToInstanceProfile  
+      				- iam:RemoveRoleFromInstanceProfile  
+      				- iam:DeleteInstanceProfile  
+      				- iam:TagRole  
+      				- iam:ListRolePolicies  
+      				- iam:ListAttachedRolePolicies  
+      				- iam:ListInstanceProfilesForRole  
+      				- iam:GetInstanceProfile  
+      				- iam:CreateInstanceProfile  
+      				- iam:AddRoleToInstanceProfile  
+      				- iam:RemoveRoleFromInstanceProfile  
+      				- iam:DeleteInstanceProfile
             Resource: "*"
 
           - Effect: Allow
